# VOQC

./: .gitignore  .qcor_plugin.yml  CMakeLists.txt  Compose.v  Dockerfile  ExtractReal.v  HOAS.v  Makefile  README.md  Testing.v  _CoqProject
core/: SQIR.v
examples/: GHZ.v  Teleport.v
optimizer/: GateCancellation.v  GridRepresentation.v  HadamardReduction.v  NotPropagation.v  Optimize.v  OptimizerGates.v  PropagateClassical.v  RemoveZRotationBeforeMeasure.v  RotationMerging.v
xacc/: CMakeLists.txt  VoqcActivator.cpp  VoqcOptimizer.cpp  VoqcOptimizer.hpp  manifest.json  voqc.h
xacc/tests/: CMakeLists.txt  VOQCTester.cpp
